--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
 
 
       #header {
-        background-image: url("images/rails.png");
+        background-image: url("images/jumpingfrog.gif");
         background-repeat: no-repeat;
         background-position: top left;
         height: 64px;
