--- a/public/index.html
+++ b/public/index.html
@@ -185,7 +185,7 @@
   </head>
   <body>
     <div id="page">
-      <div id="sidebar">
+      <div id="sidebar"><!--
         <ul id="sidebar-items">
           <li>
             <h3>Browse the documentation</h3>
@@ -196,7 +196,7 @@
               <li><a href="http://guides.rubyonrails.org/">Rails Guides</a></li>
             </ul>
           </li>
-        </ul>
+        </ul>-->
       </div>
 
       <div id="content">
