sidebar link change

--- a/public/index.html
+++ b/public/index.html
@@ -185,18 +185,15 @@
   </head>
   <body>
     <div id="page">
-      <div id="sidebar"><!--
+      <div id="sidebar">
         <ul id="sidebar-items">
           <li>
             <h3>Browse the documentation</h3>
             <ul class="links">
-              <li><a href="http://api.rubyonrails.org/">Rails API</a></li>
-              <li><a href="http://stdlib.rubyonrails.org/">Ruby standard library</a></li>
-              <li><a href="http://corelib.rubyonrails.org/">Ruby core</a></li>
-              <li><a href="http://guides.rubyonrails.org/">Rails Guides</a></li>
+              <li><a href="http://alindeman.github.com/p2pu-rubyrails/week4.html">P2PU Rails Course - Week 4</a></li>
             </ul>
           </li>
-        </ul>-->
+        </ul>
       </div>
 
       <div id="content">
