--- a/public/index.html
+++ b/public/index.html
@@ -188,9 +188,9 @@
       <div id="sidebar">
         <ul id="sidebar-items">
           <li>
-            <h3>Browse the documentation</h3>
+            <h3>Course Links</h3>
             <ul class="links">
-              <li><a href="http://alindeman.github.com/p2pu-rubyrails/week4.html">P2PU Rails Course - Week 4</a></li>
+              <li><a href="http://alindeman.github.com/p2pu-rubyrails/week4.html">P2PU Rails - Week 4</a></li>
             </ul>
           </li>
         </ul>
